# meta_git_lib

./: .gitignore  Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
src/: clone_queue.rs  lib.rs  missing.rs  snapshot.rs  ssh_multiplexing.rs
src/worktree/: git_ops.rs  helpers.rs  hooks.rs  mod.rs  store.rs  types.rs
