[package]
name = "meta_git_lib"
version = "0.1.0"
edition = "2021"
description = "Reusable git operations for meta plugins"
license = "MIT"

[dependencies]
anyhow = "1"
indicatif = "0.17"
console = "0.15"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.3"
